mdapi_output_dir/objects/Video_Card__c.object
<CustomObject>
    <label>Video Card</label>
    <nameField>
        <label>Video Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Video Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>nVidia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connectors__c</fullName>
        <label>Connectors</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_bus_bit_depth__c</fullName>
        <label>Memory bus bit depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memory_capacity__c</fullName>
        <label>Memory capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Memory__c</fullName>
        <label>Type of Memory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>